--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>Hello janta kem cho</h2>
+    <h2>Hello janta kem cho maja ma</h2>
   </body>
 </html>
