configured cloudinary for file upload

--- a/Backend_Course/formAndImg/views/postform.ejs
+++ b/Backend_Course/formAndImg/views/postform.ejs
@@ -54,9 +54,9 @@
           <input
             type="file"
             class="form-control"
-            name="image"
-            id="image"
-            accept="image"
+            name="samplefile"
+            id="samplefile"
+            multiple
           />
         </div>
 
